# kide

./: .gitignore  README.md  index.html  package-lock.json  package.json  theme-test.html  tsconfig.json  vite.config.js  vitest.config.ts
.github/: dependabot.yml
src/: App.vue  (+2 more)
src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: main-capability.json
src-tauri/icons/: icon.icns
src-tauri/src/: cleanup.rs  errors.rs  lib.rs  main.rs  shell_session.rs
src-tauri/src/commands/: command_wrapper.rs  k8s_commands.rs  mod.rs  resource_commands.rs  shell_commands.rs  system_commands.rs
src-tauri/src/environment/: setup.rs
src-tauri/src/k8s/: client.rs  errors.rs  logs.rs  mod.rs  optimized_watch.rs  resource_api.rs  resource_map.rs  resource_registry.rs  resources.rs  serialization_test.rs  shared_cache.rs  system_monitor.rs  tauri_ipc_test.rs  watch.rs  watch.rs.backup  watch_components.rs
src-tauri/src/k8s/tests/: mod.rs  pod_serialization.rs
src-tauri/src/security/: input_sanitizer.rs  mod.rs  shell_validator.rs
src-tauri/src/state/: app_state.rs  config.rs  config_loader.rs  mod.rs  state_builder.rs
src-tauri/tests/: integration_tests.rs  refactoring_integration_tests.rs  resource_update_integration_tests.rs
src-tauri/tests/api/: advanced_resource_management_tests.rs  connection_tests.rs  delete_resource_tests.rs  get_full_resource_tests.rs  mod.rs  modular_tests_documentation.rs  pod_tests.rs  resource_discovery_and_workflow_tests.rs  resource_tests.rs  scale_resource_tests.rs  test_helpers.rs  update_resource_tests.rs
(+140 files in other folders)
