[package]
name = "kide"
version = "1.0.0"
description = "OpenObserve Kide. A lightweight and fast Kubernetes IDE"
authors = ["Prabhat Sharma"]
license = "Apache 2.0"
repository = ""
edition = "2021"

[lib]
name = "kide_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
tauri = { version = "2.7.0", features = ["rustls-tls"] }
tauri-plugin-shell = "2.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
kube = { version = "1.1.0", features = ["runtime", "derive", "ws"] }
kube-runtime = "1.1.0"
k8s-openapi = { version = "0.25.0", features = ["latest"] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
tokio-stream = "0.1.16"
futures = "0.3.31"
anyhow = "1.0.98"
uuid = { version = "1.17.0", features = ["v4"] }
tokio-tungstenite = "0.27.0"
serde_yaml_ng = "0.10.0"
thiserror = "2.0.12"
regex = "1.11.1"
chrono = { version = "0.4.41", features = ["serde"] }
async-trait = "0.1.88"
once_cell = "1.21.3"
tempfile = "3.23.0"

[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.13.1"
rstest = "0.26.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
